--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-json-validator-middleware": "^2.2.1",
     "pg": "^8.7.1"
   }
 }
